criação criação página de registro

--- a/src/main/resources/static/app.html
+++ b/src/main/resources/static/app.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <header><h1>Aleatory Posts</h1></header>
     <h1>App</h1>
+    <ul></ul>
 </body>
 </html>
