--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,13 +13,16 @@
 <body>
     <main>
         <form>
-            <label>email:
+            <label>Email:
                 <input type="email" name="email" required>
             </label>
             <label>
-                <input type="password" name="pass">
+                Senha:
+                <input type="password" name="pass" required>
             </label>
             <button>Login</button>
+            <div>Não tem uma conta? <a href="./register.html">Cadastre-se</a></div>
+            
         </form>
     </main>
 </body>
