--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleLoginRegister.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/login.js"></script>
-    <title>Document</title>
+    <title>AleatoryPost</title>
 </head>
 <body>
     <main class="container" >
@@ -16,8 +16,7 @@
         <a class="links" id="index"></a>
         <a class="links" id="app"></a>
         
-        <div class="content">      
-            <!--FORMULÁRIO DE LOGIN-->
+        <div class="content">
             <div id="login">
                 <form> 
                     <h1>Aleatory Post</h1> 
