--- a/src/main/resources/static/app-edit-post.html
+++ b/src/main/resources/static/app-edit-post.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styleApp.css">
     <script src="js/fetch.js"></script>
     <script src="js/edit-post.js"></script>
     <title>AleatoryPosts</title>
 </head>
 <body>
     <header><h1>Aleatory Posts</h1></header>
-    <div><a href="./app.html"> Voltar </a></div>
+    <div id="back"><a href="./app.html"> Voltar </a></div>
     <form>
         <h3>Editando post</h3>
         <label>
@@ -38,5 +39,10 @@
         <input type="hidden" name="user_id" value="">
         <button type="submit">Editar</button>
     </form>
+    <section class="footer">
+        <div class="container footer-content">
+            <p>&copy; Trabalho Final da Disciplina de Programação para Web III</p>
+        </div>
+    </section>
 </body>
 </html>
