--- a/src/main/resources/static/app-edit-post.html
+++ b/src/main/resources/static/app-edit-post.html
@@ -4,39 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styleApp.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="js/fetch.js"></script>
     <script src="js/edit-post.js"></script>
     <title>AleatoryPosts</title>
 </head>
 <body>
-    <header><h1>Aleatory Posts</h1></header>
-    <div><a href="./app.html"> Voltar </a></div>
-    <form>
-        <h3>Editando post</h3>
-        <label>
-            Categoria:
-            <select name="category">
-                <option value="SPORTS">Esporte</option>
-                <option value="GENERAL_CULTURE">Cultura Geral</option>
-                <option value="POLITICS">Política</option>
-                <option value="MUSIC">Músicas</option>
-                <option value="VIDEO_GAMES">Video game</option>
-                <option value="RELIGION">Relegião</option>
-                <option value="SCIENCE">Ciência</option>
-            </select>
-        </label>
-        <input type="hidden" name="id" value="">
-        <label>
-            Título:
-            <input type="text"  name="title" required>
-        </label>
-        <label>
-            Conteúdo:
-            <textarea name="content" cols="30" rows="10" required></textarea>
-        </label>
-        <input type="hidden" name="datetime" value="">
-        <input type="hidden" name="user_id" value="">
-        <button type="submit">Editar</button>
-    </form>
+<header><h1>Aleatory Posts</h1></header>
+<nav id="navbar">
+    <ul>
+        <li> <a href="./app.html">Voltar</a> </li>
+    </ul>
+</nav>
+<form>
+    <h3>Editando post</h3>
+    <label>
+        Categoria:
+        <select name="category">
+            <option value="SPORTS">Esporte</option>
+            <option value="GENERAL_CULTURE">Cultura Geral</option>
+            <option value="POLITICS">Política</option>
+            <option value="MUSIC">Músicas</option>
+            <option value="VIDEO_GAMES">Video game</option>
+            <option value="RELIGION">Relegião</option>
+            <option value="SCIENCE">Ciência</option>
+        </select>
+    </label>
+    <input type="hidden" name="id" value="">
+    <label>
+        Título:
+        <input type="text"  name="title" required>
+    </label>
+    <label>
+        Conteúdo:
+        <textarea name="content" cols="30" rows="10" required></textarea>
+    </label>
+    <input type="hidden" name="datetime" value="">
+    <input type="hidden" name="user_id" value="">
+    <button type="submit" class="btn btn-info">Editar</button>
+</form>
+<section class="footer">
+    <div class="container footer-content">
+        <p>&copy; Trabalho Final da Disciplina de Programação para Web III</p>
+    </div>
+</section>
 </body>
 </html>
