--- a/src/main/resources/static/app-register-post.html
+++ b/src/main/resources/static/app-register-post.html
@@ -5,51 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleApp.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="js/fetch.js"></script>
     <script src="js/register-post.js"></script>
     <title>AleatoryPosts</title>
 </head>
 <body>
-    <header><h1>Aleatory Posts</h1></header>
-    <nav id="navbar">
-        <ul>
-            <li> <a href="./app.html">Voltar</a> </li>
-        </ul>
-    </nav>
-    <section class="postList" id="postList">
-        <div id="content">
-            <form>
-                <h3 id="post-list-title">Novo post</h3></br>
-                <label>
-                    Categoria:
-                    <select name="category">
-                        <option value="SPORTS">Esporte</option>
-                        <option value="GENERAL_CULTURE">Cultura Geral</option>
-                        <option value="POLITICS">Política</option>
-                        <option value="MUSIC">Músicas</option>
-                        <option value="VIDEO_GAMES">Video game</option>
-                        <option value="RELIGION">Relegião</option>
-                        <option value="SCIENCE">Ciência</option>
-                    </select>
-                </label>
-                <label>
-                    Título:
-                    <input type="text"  name="title" required>
-                </label>
-                <label>
-                    Conteúdo:
-                    <textarea name="content" cols="30" rows="10" required></textarea>
-                </label>
-                <input type="hidden" name="datetime" value="">
-                <input type="hidden" name="user_id" value="">
-                <button type="submit">Salvar</button>
-            </form>
-        </div>
-    </section>
-    <section class="footer">
-        <div class="container footer-content">
-            <p>&copy; Trabalho Final da Disciplina de Programação para Web III</p>
-        </div>
-    </section>
+<header><h1>Aleatory Posts</h1></header>
+<section class="postList" id="postList">
+    <div id="content">
+        <nav id="navbar">
+            <ul>
+                <li> <a href="./app.html">Voltar</a> </li>
+            </ul>
+        </nav>
+        <form>
+            <h3 id="post-list-title">Novo post</h3></br>
+            <label>
+                Categoria:
+                <select name="category">
+                    <option value="SPORTS">Esporte</option>
+                    <option value="GENERAL_CULTURE">Cultura Geral</option>
+                    <option value="POLITICS">Política</option>
+                    <option value="MUSIC">Músicas</option>
+                    <option value="VIDEO_GAMES">Video game</option>
+                    <option value="RELIGION">Relegião</option>
+                    <option value="SCIENCE">Ciência</option>
+                </select>
+            </label>
+            <label>
+                Título:
+                <input type="text"  name="title" required>
+            </label>
+            <label>
+                Conteúdo:
+                <textarea name="content" cols="30" rows="10" required></textarea>
+            </label>
+            <input type="hidden" name="datetime" value="">
+            <input type="hidden" name="user_id" value=""><br>
+            <button type="submit" class="btn btn-info">Salvar</button>
+        </form>
+    </div>
+</section>
+<section class="footer">
+    <div class="container footer-content">
+        <p>&copy; Trabalho Final da Disciplina de Programação para Web III</p>
+    </div>
+</section>
 </body>
 </html>
