--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/login.js"></script>
-    <title>AleatoryPost</title>
+    <title>AleatoryPosts</title>
 </head>
 <body>
     <main class="container" >
@@ -16,7 +16,8 @@
         <a class="links" id="index"></a>
         <a class="links" id="app"></a>
         
-        <div class="content">
+        <div class="content">      
+            <!--FORMULÁRIO DE LOGIN-->
             <div id="login">
                 <form> 
                     <h1>Aleatory Post</h1> 
