Update CSS database item

--- a/src/main/resources/static/app-post.html
+++ b/src/main/resources/static/app-post.html
@@ -29,7 +29,7 @@
         </div>
         <div>
             <form>
-                <label>Comentar:</label><br>
+                <label>Comentar:</label></br>
                 <textarea name="comment"></textarea>
                 <button type="submit" class="btn btn-submit">Salvar</button>
             </form>
